It will adjust the styling of the contact information

--- a/index.html
+++ b/index.html
@@ -5,7 +5,29 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <title>KK Portfolio Landing Page</title>
 </head>
+<body>
+  <div class="jumbotron float-left">
+    <img src="assets/images/Kevin-Portrait.jpeg" alt="Portrait of Kevin Kirkley" style="height: 250px; width: auto;">
+  </div>
+  <div class="jumbotron text-center">
+    <h1>Kevin Kirkley</h1>
+    <ul class="contact">Contact</ul>
+    <div class="contact-info">
+      <li><a href="kevinmkirkley@gmail.com">kevinmkirkley@gmail.com</a></li>
+      <li>(928)814-3925</li>
+      <li>6553 SE 67th Ave Portland, Oregon 97206</li>
+    </div> 
+  </div> 
 
+
+
+
+
+
+
+
+
+</body>
 
 
 </html>
