--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="jumbotron float-left">
-    <img src="assets/images/Kevin-Portrait.jpeg" alt="Portrait of Kevin Kirkley" style="height: 250px; width: auto;">
+    <img src="assets/images/Kevin-Portrait.jpeg" alt="Portrait of Kevin Kirkley" style="height: 150px; width: auto;">
   </div>
   <div class="jumbotron text-center">
     <h1>Kevin Kirkley</h1>
@@ -18,6 +18,45 @@
       <li>6553 SE 67th Ave Portland, Oregon 97206</li>
     </div> 
   </div> 
+  <div class="background-info">
+    <div class="row">
+      <div class="col-4">
+        <div class="card">
+          <div class="card-body">
+            <h3 class="card-title">About Me:</h3>
+              <p class="card-text">Born and raised in Arizona I spent a lot of my time enjoying the outdoors. </p>
+            </ul>  
+            </h3>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-4">
+        <div class="card">
+          <div class="card-body">
+            <h3 class="card-title">About Me:</h3>
+              <p class="card-text">Born and raised in Arizona I spent a lot of my time enjoying the outdoors. </p>
+            </ul>  
+            </h3>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-4">
+        <div class="card">
+          <div class="card-body">
+            <h3 class="card-title">About Me:</h3>
+              <p class="card-text">Born and raised in Arizona I spent a lot of my time enjoying the outdoors. </p>
+            </ul>  
+            </h3>
+          </div>
+        </div>
+      </div>
+    </div>
+  
+  </div>
 
 
 
