It will make the background info cards arrange properly, added text to info cards

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="jumbotron float-left">
-    <img src="assets/images/Kevin-Portrait.jpeg" alt="Portrait of Kevin Kirkley" style="height: 150px; width: auto;">
+    <img class="portrait" src="assets/images/Kevin-Portrait.jpeg" alt="Portrait of Kevin Kirkley" style="height: 150px; width: auto;">
   </div>
   <div class="jumbotron text-center">
     <h1>Kevin Kirkley</h1>
@@ -24,33 +24,31 @@
         <div class="card">
           <div class="card-body">
             <h3 class="card-title">About Me:</h3>
-              <p class="card-text">Born and raised in Arizona I spent a lot of my time enjoying the outdoors. </p>
-            </ul>  
-            </h3>
+              <p class="card-text">Born and raised in Arizona I spent a lot of my time enjoying the outdoors. Moved to Oregon in 2019 to pursue work with ODFW. Currently awaiting arrival of my first child! </p>  
           </div>
         </div>
       </div>
-    </div>
-    <div class="row">
       <div class="col-4">
         <div class="card">
           <div class="card-body">
-            <h3 class="card-title">About Me:</h3>
-              <p class="card-text">Born and raised in Arizona I spent a lot of my time enjoying the outdoors. </p>
-            </ul>  
-            </h3>
+            <h3 class="card-title">Experience</h3>
+            <ul>
+              <li>Education: BS Environmental Science, NAU</li>
+              <li>Experimental Biology Assistant: Oregon Department of Fish and Wildlife</li>
+              <li>Installation Technician: Leitner Poma</li>
+            </ul> 
           </div>
         </div>
       </div>
-    </div>
-    <div class="row">
       <div class="col-4">
         <div class="card">
           <div class="card-body">
-            <h3 class="card-title">About Me:</h3>
-              <p class="card-text">Born and raised in Arizona I spent a lot of my time enjoying the outdoors. </p>
-            </ul>  
-            </h3>
+            <h3 class="card-title">Interests</h3>
+            <ul>
+              <li>Outdoors: backpacking, split-boarding, hiking.</li>
+              <li>Music: Attending shows, playing drums, learning guitar.</li>
+              <li>Skateboarding</li>
+            </ul>
           </div>
         </div>
       </div>
