This will add a linear gradient background to the jumbotron holding my photo and Title information.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h3 class="card-title">Interests</h3>
             <ul>
               <li>Outdoors: backpacking, split-boarding, hiking.</li>
-              <li>Music: Attending shows, playing drums, learning guitar.</li>
+              <li>Music: Attending shows (pre-covid), playing drums, learning guitar.</li>
               <li>Skateboarding</li>
             </ul>
           </div>
