This will add emphasis to text in about me section

--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
       <li>6553 SE 67th Ave Portland, Oregon 97206</li>
     </div> 
   </div> 
+  <div class="recent-projects"
+
   <div class="background-info">
     <div class="row">
       <div class="col-4">
         <div class="card">
           <div class="card-body">
             <h3 class="card-title">About Me:</h3>
-              <p class="card-text">Born and raised in Arizona I spent a lot of my time enjoying the outdoors. Moved to Oregon in 2019 to pursue work with ODFW. Currently awaiting arrival of my first child! </p>  
+              <p class="card-text">Born and raised in Arizona I spent a lot of my time enjoying the outdoors. Moved to Oregon in 2019 to pursue work with ODFW. <em><strong>Currently awaiting arrival of my first child!</strong></em> </p>  
           </div>
         </div>
       </div>
