--- a/index.html
+++ b/index.html
@@ -18,7 +18,39 @@
       <li>6553 SE 67th Ave Portland, Oregon 97206</li>
     </div> 
   </div> 
-  <div class="recent-projects"
+  <h2 class="text-center">Recent Projects</h2>
+  <div class="recent-projects">
+    <div class="row">
+      <div class="col-3">
+        <div class="card">
+          <div class="card-body">
+            <h3 class="card-title"></h3>
+          </div>
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="card">
+          <div class="card-body">
+            <h3 class="card-title"></h3>
+          </div>
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="card">
+          <div class="card-body">
+            <h3 class="card-title"></h3>
+          </div>
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="card">
+          <div class="card-body">
+            <h3 class="card-title"></h3>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <div class="background-info">
     <div class="row">
@@ -26,7 +58,7 @@
         <div class="card">
           <div class="card-body">
             <h3 class="card-title">About Me:</h3>
-              <p class="card-text">Born and raised in Arizona I spent a lot of my time enjoying the outdoors. Moved to Oregon in 2019 to pursue work with ODFW. <em><strong>Currently awaiting arrival of my first child!</strong></em> </p>  
+              <p class="card-text">Born and raised in Arizona I spent a lot of my time enjoying the outdoors. Moved to Oregon in 2019 to pursue work with ODFW and decided to stay in the PNW after the work concluded. <em><strong>Currently awaiting arrival of my first child!</strong></em> </p>  
           </div>
         </div>
       </div>
