It will add a hyperlink to the jim-sullivan github repo, list of skills practiced in page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
       <div class="col-3">
         <div class="card">
           <div class="card-body">
-            <h3 class="card-title"></h3>
+            <h3 class="card-title"><a href="https://github.com/kevinkirkl3y/jim-sullivan.git">Jim Sullivan</a></h3>
+            <strong>In this project we:</strong>
+            <ol class="project-info-text">
+              <li>Practiced using bootstraph(i.e. Implementation of jumbotron)</li>
+              <li>Styled text using stylesheets.</li>
+              <li>Attempted, unsuccessfully, to create grid formations.</li>
+            </ol>
           </div>
         </div>
       </div>
