It will add the final featured projects that are shown on the portfolio page.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Kevin Kirkley</h1>
     <ul class="contact">Contact</ul>
     <div class="contact-info">
-      <li><a href="kevinmkirkley@gmail.com">kevinmkirkley@gmail.com</a></li>
+      <li><a href="mailto:kevinmkirkley@gmail.com">kevinmkirkley@gmail.com</a></li>
       <li>(928)814-3925</li>
       <li>6553 SE 67th Ave Portland, Oregon 97206</li>
     </div> 
@@ -30,28 +30,64 @@
               <li>Practiced using bootstraph(i.e. Implementation of jumbotron)</li>
               <li>Styled text using stylesheets.</li>
               <li>Attempted, unsuccessfully, to create grid formations.</li>
+              <li>Languages Utilized: HTML, CSS, Bootstrap and Git</li>
             </ol>
+            <ul class="att-author">
+            <strong>Co-Authors</strong>
+              <li>Tawnee Harris</li>
+              <li>Patrick Osten</li>
+            </ul>
           </div>
         </div>
       </div>
       <div class="col-3">
         <div class="card">
           <div class="card-body">
-            <h3 class="card-title"></h3>
+            <h3 class="card-title"><a href="https://github.com/kevinkirkl3y/cupcakeShop.git">Cupcake Shop</a></h3>
+            <strong>In this project we:</strong>
+            <ol class="project-info-text">
+              <li>Practiced adding photos to our pages.</li>
+              <li>Implemented the use of ordered lists.</li>
+              <li>Used basic style formatting in order to show emphasis.</li>
+              <li>Languages Utilized: HTML, CSS and Git</li>
+            </ol>
+            <ul class="att-author">
+              <strong>Co-Authors</strong>
+                <li>Tawnee Harris</li>
+                <li>Patrick Osten</li>
+            </ul>
           </div>
         </div>
       </div>
       <div class="col-3">
         <div class="card">
           <div class="card-body">
-            <h3 class="card-title"></h3>
+            <h3 class="card-title"><a href="https://github.com/kevinkirkl3y/media-query-practice.git">Media Query Practice</a></h3>
+            <strong>In this project I:</strong>
+            <ol class="project-info-text">
+              <li>Practiced adding media queries to make adjustments as screen sizes change.</li>
+              <li>Used breakpoints to note when changes in page layout should shift.</li>
+              <li>Used basic style formatting in order to show emphasize the changes.</li>
+              <li>Languages Utilized: HTML, CSS, Bootstrap and Git</li>
           </div>
         </div>
       </div>
       <div class="col-3">
         <div class="card">
           <div class="card-body">
-            <h3 class="card-title"></h3>
+            <h3 class="card-title"><a href="https://github.com/kevinkirkl3y/grand-canyon-vacation.git">Grand Canyon Vacation</a></h3>
+            <strong>In this project we:</strong>
+            <ol class="project-info-text">
+              <li>Practiced creating rows and collumns using Bootstrap.</li>
+              <li>Utilized a standalone css stylesheet to make style adjustments to classes.</li>
+              <li>Used basic style formatting in order to show emphasize pricing, etc.</li>
+              <li>Languages Utilized: HTML, CSS, Bootstrap and Git</li>
+            </ol>
+            <ul class="att-author">
+              <strong>Co-Authors</strong>
+                <li>Chelsea Becker</li>
+                <li>Eric Endsley</li>
+            </ul>
           </div>
         </div>
       </div>
