It will add spans with class of interest to provide emphasis.

--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
           <div class="card-body">
             <h3 class="card-title">Interests</h3>
             <ul>
-              <li>Outdoors: backpacking, split-boarding, hiking.</li>
-              <li>Music: Attending shows (pre-covid), playing drums, learning guitar.</li>
-              <li>Skateboarding</li>
+              <li><span class="interests">Outdoors</span>: backpacking, split-boarding, hiking.</li>
+              <li><span class="interests">Music</span>:Attending shows (pre-covid), playing drums, learning guitar.</li>
+              <li><span class="interests">Skateboarding</span></li>
             </ul>
           </div>
         </div>
