It will add a subheader to the Background Information section of my page as well as add hyperlinks to prior employers and educational institutions

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <li>6553 SE 67th Ave Portland, Oregon 97206</li>
     </div> 
   </div> 
-  <h2 class="text-center">Recent Projects</h2>
+  <h2 class="text-center"><span class="subhead">Recent Projects</span</h2>
   <div class="recent-projects">
     <div class="row">
       <div class="col-3">
@@ -93,14 +93,14 @@
       </div>
     </div>
   </div>
-
+  <h2 class="text-center"><span class="subhead">Background Information</span></h2>
   <div class="background-info">
     <div class="row">
       <div class="col-4">
         <div class="card">
           <div class="card-body">
             <h3 class="card-title">About Me:</h3>
-              <p class="card-text">Born and raised in Arizona I spent a lot of my time enjoying the outdoors. Moved to Oregon in 2019 to pursue work with ODFW and decided to stay in the PNW after the work concluded. <em><strong>Currently awaiting arrival of my first child!</strong></em> </p>  
+              <p class="card-text">Born and raised in Arizona I spent a lot of my time enjoying the outdoors. Moved to Oregon in 2019 to pursue work with <a href="https://www.dfw.state.or.us/">ODFW</a>and decided to stay in the PNW after the work concluded. <em><strong>Currently awaiting arrival of my first child!</strong></em> </p>  
           </div>
         </div>
       </div>
@@ -109,9 +109,9 @@
           <div class="card-body">
             <h3 class="card-title">Experience</h3>
             <ul>
-              <li>Education: BS Environmental Science, NAU</li>
+              <li>Education: BS Environmental Science, <a href="https://nau.edu/">NAU</a></li>
               <li>Experimental Biology Assistant: Oregon Department of Fish and Wildlife</li>
-              <li>Installation Technician: Leitner Poma</li>
+              <li>Installation Technician: <a href="http://leitner-poma.com/">Leitner Poma</a></li>
             </ul> 
           </div>
         </div>
