Removed jumbotron from portrait photo, attempted workarounds to fix text shift of centered text. Added this bug to README.md.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
   <title>KK Portfolio Landing Page</title>
 </head>
 <body>
-  <div class="jumbotron float-left">
-    <img class="portrait" src="assets/images/Kevin-Portrait.jpeg" alt="Portrait of Kevin Kirkley" style="height: 150px; width: auto;">
-  </div>
+    <img class="portrait float-left" src="assets/images/Kevin-Portrait.jpeg" alt="Portrait of Kevin Kirkley" style="height: 300px; width: auto;">
   <div class="jumbotron text-center">
     <h1>Kevin Kirkley</h1>
     <ul class="contact">Contact</ul>
@@ -25,9 +23,9 @@
         <div class="card">
           <div class="card-body">
             <h3 class="card-title"><a href="https://github.com/kevinkirkl3y/jim-sullivan.git">Jim Sullivan</a></h3>
-            <strong>In this project we:</strong>
+            <strong class="proj-goal">In this project we:</strong>
             <ol class="project-info-text">
-              <li>Practiced using bootstraph(i.e. Implementation of jumbotron)</li>
+              <li>Practiced using Bootstrap (i.e. Implementation of jumbotron)</li>
               <li>Styled text using stylesheets.</li>
               <li>Attempted, unsuccessfully, to create grid formations.</li>
               <li>Languages Utilized: HTML, CSS, Bootstrap and Git</li>
@@ -44,7 +42,7 @@
         <div class="card">
           <div class="card-body">
             <h3 class="card-title"><a href="https://github.com/kevinkirkl3y/cupcakeShop.git">Cupcake Shop</a></h3>
-            <strong>In this project we:</strong>
+            <strong class="proj-goal">In this project we:</strong>
             <ol class="project-info-text">
               <li>Practiced adding photos to our pages.</li>
               <li>Implemented the use of ordered lists.</li>
@@ -63,7 +61,7 @@
         <div class="card">
           <div class="card-body">
             <h3 class="card-title"><a href="https://github.com/kevinkirkl3y/media-query-practice.git">Media Query Practice</a></h3>
-            <strong>In this project I:</strong>
+            <strong class="proj-goal">In this project I:</strong>
             <ol class="project-info-text">
               <li>Practiced adding media queries to make adjustments as screen sizes change.</li>
               <li>Used breakpoints to note when changes in page layout should shift.</li>
@@ -76,7 +74,7 @@
         <div class="card">
           <div class="card-body">
             <h3 class="card-title"><a href="https://github.com/kevinkirkl3y/grand-canyon-vacation.git">Grand Canyon Vacation</a></h3>
-            <strong>In this project we:</strong>
+            <strong class="proj-goal">In this project we:</strong>
             <ol class="project-info-text">
               <li>Practiced creating rows and collumns using Bootstrap.</li>
               <li>Utilized a standalone css stylesheet to make style adjustments to classes.</li>
@@ -100,7 +98,7 @@
         <div class="card">
           <div class="card-body">
             <h3 class="card-title">About Me:</h3>
-              <p class="card-text">Born and raised in Arizona I spent a lot of my time enjoying the outdoors. Moved to Oregon in 2019 to pursue work with <a href="https://www.dfw.state.or.us/">ODFW</a>and decided to stay in the PNW after the work concluded. <em><strong>Currently awaiting arrival of my first child!</strong></em> </p>  
+              <p class="card-text">Born and raised in Arizona I spent a lot of my time enjoying the outdoors. Moved to Oregon in 2019 to pursue work with <a href="https://www.dfw.state.or.us/">ODFW</a> and decided to stay in the PNW after the work concluded. <em><strong>Currently awaiting arrival of my first child!</strong></em> </p>  
           </div>
         </div>
       </div>
@@ -108,10 +106,12 @@
         <div class="card">
           <div class="card-body">
             <h3 class="card-title">Experience</h3>
-            <ul>
-              <li>Education: BS Environmental Science, <a href="https://nau.edu/">NAU</a></li>
-              <li>Experimental Biology Assistant: Oregon Department of Fish and Wildlife</li>
-              <li>Installation Technician: <a href="http://leitner-poma.com/">Leitner Poma</a></li>
+            <ul class="card-text">
+              <div class="background-text">
+                <li>Education: BS Environmental Science, <a href="https://nau.edu/">NAU</a></li>
+                <li>Experimental Biology Assistant: Oregon Department of Fish and Wildlife</li>
+                <li>Installation Technician: <a href="http://leitner-poma.com/">Leitner Poma</a></li>
+              </div>
             </ul> 
           </div>
         </div>
@@ -120,10 +120,12 @@
         <div class="card">
           <div class="card-body">
             <h3 class="card-title">Interests</h3>
-            <ul>
-              <li><span class="interests">Outdoors</span>: backpacking, split-boarding, hiking.</li>
-              <li><span class="interests">Music</span>:Attending shows (pre-covid), playing drums, learning guitar.</li>
-              <li><span class="interests">Skateboarding</span></li>
+            <ul class="card-text">
+              <div class="background-text">
+                <li><span class="interests">Outdoors</span>: backpacking, split-boarding, hiking.</li>
+                <li><span class="interests">Music</span>:Attending shows (pre-covid), playing drums, learning guitar.</li>
+                <li><span class="interests">Skateboarding</span></li>
+              </div>
             </ul>
           </div>
         </div>
