This will perform some text formatting primarily aligning text to the left

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="card">
           <div class="card-body">
             <h3 class="card-title">About Me:</h3>
-              <p class="card-text">Born and raised in Arizona I spent a lot of my time enjoying the outdoors. Moved to Oregon in 2019 to pursue work with <a href="https://www.dfw.state.or.us/">ODFW</a> and decided to stay in the PNW after the work concluded. <em><strong>Currently awaiting arrival of my first child!</strong></em> </p>  
+              <p class="card-text bio">Born and raised in Arizona I spent a lot of my time enjoying the outdoors. Moved to Oregon in 2019 to pursue work with <a href="https://www.dfw.state.or.us/">ODFW</a> and decided to stay in the PNW after the work concluded. <em><strong>Currently awaiting arrival of my first child!</strong></em> </p>  
           </div>
         </div>
       </div>
@@ -125,6 +125,7 @@
                 <li><span class="interests">Outdoors</span>: backpacking, split-boarding, hiking.</li>
                 <li><span class="interests">Music</span>:Attending shows (pre-covid), playing drums, learning guitar.</li>
                 <li><span class="interests">Skateboarding</span></li>
+                <li><span class="interests">Food</span>: I love taking advantage of all the wonderful restaurants Portland has to offer!</li>
               </div>
             </ul>
           </div>
