This will finalize any changes made to portfolio before submission

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <div class="col-4">
         <div class="card">
           <div class="card-body">
-            <h3 class="card-title">About Me:</h3>
+            <h3 class="card-title">About Me</h3>
               <p class="card-text bio">Born and raised in Arizona I spent a lot of my time enjoying the outdoors. Moved to Oregon in 2019 to pursue work with <a href="https://www.dfw.state.or.us/">ODFW</a> and decided to stay in the PNW after the work concluded. <em><strong>Currently awaiting arrival of my first child!</strong></em> </p>  
           </div>
         </div>
@@ -132,18 +132,6 @@
         </div>
       </div>
     </div>
-  
   </div>
-
-
-
-
-
-
-
-
-
 </body>
-
-
 </html>
